--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@ngx-pwa/local-storage": "^10.1.0",
     "cpx": "^1.5.0",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.9.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
